* let cgi processes die on config change this provides for smoother
  behaviour than a horde of instances going for a cfg reload. --tobi

* tune speedy parameters for a more reasonable behaviour --tobi

* rewrite storing of multiple slave updates for better performance --tobi

* fix bug in storage of slave updatesL: when the local smokeping daemon
  running only the first update could be read back, the others were hidden
  in the storeable. --tobi

* set sig child to IGNORE for automatic reaping of zombies -- tobi

2008/7/24 -- released version 2.4.2

* added strict to both wrappers and fixed some followup errors -- tobi

* kill taint error in Smokeping.pm -- tobi

* better master/slave secrets documentation -- tobi

* do not load :sys_wait_h from POSIX perl module since this seems to
  be missing in some linux distros and we can do alright without.

2008/6/13 -- released version 2.4.1

* fixed js packaging error ...  s/VERSION/x/ was a bad idea

2008/6/10 -- released version 2.4.0

* building a --static version of the smokeping page is broken. Make
  it a little less broken by providing a dummyCGI->script_name method.
  --tobi

* added blazemode option to FPing, so that it sends an extra ping to
  blaze a path to the destionation and then discarges it. Based on idea by
  G.W. Haywood  -- tobi

* fix for telneJunOSPing by Christian Hahn -- tobi

* fixed FPing regression created in r680 it broke the proper handling of old
  version of fping. Found by  Celedonio Miranda Torresano -- tobi

* first cut at mtr integration ... added new menuextra config item
  to build mtr links. -- tobi

* use localtime to construct the rawlog filename 
  --tobi as reported by Kent Kuriyama

* allow slave names to have . in them but not target sections. --tobi

2008/4/26 -- released version 2.3.6

* add custom style for active menu link
  -- tobi, patch by Daniel Rich drich employees.org

* honour the 'linkstyle' variable when zooming